# platform-game-mechanics

./: .gitignore  CMakeLists.txt  README.md
ProjectSettings/: ProjectSettings.asset
src/: character.h  commontypes.h  main.cpp  movable.h  sfmlcharacter.cpp  sfmlcharacter.h
